fix(theme): Improve key readability in help dialog

--- a/packages/excalidraw/components/HelpDialog.scss
+++ b/packages/excalidraw/components/HelpDialog.scss
@@ -118,7 +118,8 @@
       display: flex;
       box-sizing: border-box;
       font-size: 0.625rem;
-      background-color: var(--color-primary-light);
+      background-color: var(--color-primary-darkest);
+      color: var(--color-primary-lightest);
       border-radius: var(--border-radius-md);
       padding: 0.5rem;
       word-break: keep-all;
